--- a/rp2040-hal/Cargo.toml
+++ b/rp2040-hal/Cargo.toml
@@ -63,3 +63,8 @@ rom-v2-intrinsics = []
 # irq example uses cortex-m-rt::interrupt, need rt feature for that
 name = "gpio_irq_example"
 required-features = ["rt"]
+
+[[example]]
+# irq example uses cortex-m-rt::interrupt, need rt feature for that
+name = "adc_fifo"
+required-features = ["rt"]
