--- a/rp2040-hal/Cargo.toml
+++ b/rp2040-hal/Cargo.toml
@@ -17,6 +17,7 @@ eh1_0_alpha = { version = "=1.0.0-alpha.7", package="embedded-hal", optional=tru
 embedded-time = "0.12.0"
 itertools = { version = "0.10.1", default-features = false }
 nb = "1.0"
+num-traits = { version = "0.2.0", default-features = false }
 rp2040-pac = "0.3.0"
 paste = "1.0"
 pio = "0.2.0"
