--- a/boards/pimoroni-badger2040/Cargo.toml
+++ b/boards/pimoroni-badger2040/Cargo.toml
@@ -22,9 +22,8 @@ embedded-hal ="0.2.5"
 panic-halt= "0.2.0"
 nb = "1.0"
 embedded-graphics = "0.7.1"
-
-defmt = "0.2.0"
-defmt-rtt = "0.2.0"
+embedded-text  = "*"
+uc8151 = "0.1"
 
 [features]
 default = ["boot2", "rt"]
